----------------
Jun 01, 2020
Name: Qimen Xu
* Correct the relative src/ path run_examples.m in tests/examples.
* Modify readPseudopot.m to be consistent with SPARC, so that it can handle special psp8 pseudopotentials (e.g., He with lloc = 0).


----------------
Feb 03, 2020
Name: Qimen Xu
* Update documentation and README.md, add link to SG15 ONCV potentials.
* Move examples/ directory to under tests/.
* Add M-SPARC version to .out file.
* Print boundary conditions in the form of `BC: P P D` in .out file.
* Rerun tests and update the reference output files.
